# Ai_Agents_and_RAG

./: adaptive_rag_langgraph.ipynb  langgraph_crag.ipynb  selfrag.ipynb
a_rag_carTrouble/: rough.ipynb
a_rag_carTrouble/lancedb/car_maintenance_table.lance/_transactions/: 0-2c69a7d5-1d6d-47bc-b3e5-9c0713fe5b53.txn  1-db76e42f-18be-4a33-b686-47ff34262e30.txn  2-a1d03a65-c859-4b3c-a3c4-76556372e93e.txn  3-22092185-0ca8-49ea-91e8-6e714c01ae1d.txn
a_rag_carTrouble/lancedb/car_maintenance_table.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest
a_rag_carTrouble/lancedb/car_maintenance_table.lance/data/: 0d580357-baca-4a3b-9a44-94e600a30c2a.lance  4bb501a5-c6c5-4917-9871-c04ebca74108.lance  69d5f85b-d432-407a-9238-e8472f08db4a.lance
a_rag_carTrouble/lancedb/cost_estimates_table.lance/_transactions/: 0-90d355c7-5e4e-4abd-ba2b-a5341c7a891c.txn  1-04f05b0d-ebe9-4dc8-a37d-4ddecbf9735c.txn  2-ab408657-dacf-453f-aee0-0092417bffc5.txn  3-bad876ca-d230-494b-b026-6fc634663181.txn
a_rag_carTrouble/lancedb/cost_estimates_table.lance/_versions/: 1.manifest  2.manifest  3.manifest  (+1 more)
email_auto_draft_crewaiLanggraph/: pyproject.toml  readme.md
email_auto_draft_crewaiLanggraph/src/: graph.py  main.py  nodes.py  state.py
email_auto_draft_crewaiLanggraph/src/crew/: agents.py  crew.py  tasks.py  tools.py
rag_agent_vertexai/: hello.py  pyproject.toml
rag_agent_vertexai/rag_agent/: agent.py  config.py
rag_agent_vertexai/rag_agent/tools/: add_data.py  create_corpus.py  delete_corpus.py  delete_document.py  get_corpus_info.py  list_corpora.py  rag_query.py  utils.py
(+47 files in other folders)
