[project]
name = "rag-agent-vertexai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.3.0",
    "google-cloud-aiplatform>=1.97.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.20.0",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
